--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,9 +1,14 @@
+:root{
+  --main-yellow: #FFDF6F;
+  --background-yellow: #F5F2E8;
+  --background-black: #42413F;
+}
 html,
-body {
+body,
+button {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Century, Helvetica Neue, sans-serif;
 }
 
 a {
