--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -52,8 +52,9 @@
 
 #image{
   width: 100%;
-  height: 300px;
+  min-height: 400px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
