--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -37,11 +37,11 @@
   button{
     @include button;
     width: 100%;
-    margin: 0.5rem 0 0;
   }
 #buttons{
   #start{
-    font-size: large
+    font-size: large;
+    margin: 0 0 0.5rem;
   }
   div{display: flex;
   justify-content: center;
@@ -53,10 +53,12 @@
 #image{
   width: 100%;
   min-height: 400px;
+  margin: 1rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .footer {
