--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -23,7 +23,7 @@
   justify-content: space-between;
   padding: 0 1.5rem;
   p{
-    color: white;
+    color: var(--background-yellow);
     margin: 0.5rem 0;
   }
 }
