--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -1,7 +1,7 @@
 :root{
-  --main-yellow: #FFDF6F;
+  --main-yellow: #dfc79e;
   --background-yellow: #F5F2E8;
-  --background-black: #42413F;
+  --background-black: #32281e;
 }
 html,
 body,
