Settings popUp functionality

--- a/frontend/styles/partials/_layout.scss
+++ b/frontend/styles/partials/_layout.scss
@@ -1,5 +1,5 @@
 @mixin popUp {
-    position: absolute;
+    position: fixed;
     left: 50%;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
