--- a/frontend/styles/Settings.module.scss
+++ b/frontend/styles/Settings.module.scss
@@ -13,3 +13,14 @@
 #settings{
     padding: var(--padding-side);
 }
+#icon{
+    position: fixed;
+    top: 1%;
+    left: 1%;
+    width: 30px;
+    height: 30px;
+    z-index: 11;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
