--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -1,4 +1,5 @@
 @use 'partials/layout' as layout;
+@use 'partials/buttons' as buttons;
 
 :root{
   --main-yellow: #dfc79e;
@@ -28,4 +29,14 @@ a {
   background-color: var(--background-black);
   color: var(--background-yellow);
   z-index: 11;
+}
+.closeButton{
+  position: absolute;
+  left: 1%;
+  top: 1%;
+  @include buttons.button;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  padding: 0;
 }
