--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -15,7 +15,10 @@ button {
   margin: 0;
   font-family: Century, Helvetica Neue, sans-serif;
 }
+body{
+  background-image: url("/newspapertexture.jpg");
 
+}
 a {
   color: inherit;
   text-decoration: none;
