--- a/frontend/styles/events/Display.module.scss
+++ b/frontend/styles/events/Display.module.scss
@@ -4,4 +4,11 @@
     justify-content: center;
     gap: 2rem;
     margin: 1rem;
+    height: 100vh;
+    overflow: scroll;
+    &::-webkit-scrollbar {
+        display: none;
+      }
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;
 }
