--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -59,6 +59,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  border: 3px solid var(--background-black);
+  background-color: var(--main-yellow);
 }
 
 .footer {
