--- a/frontend/styles/events/Display.module.scss
+++ b/frontend/styles/events/Display.module.scss
@@ -1,10 +1,11 @@
 .display{
     display: grid;
-    align-items: center;
-    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    justify-items: center;
     gap: 2rem;
-    margin: 1rem;
-    height: 100vh;
+    padding: 1rem;
+    max-height: 60vh;
+    width: 100%;
     overflow: scroll;
     &::-webkit-scrollbar {
         display: none;
