--- a/frontend/styles/Game.module.scss
+++ b/frontend/styles/Game.module.scss
@@ -5,8 +5,10 @@
     background-color: var(--main-yellow);
     width: 100vw;
     height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 10;
 }
 .display{
     .inside{
