--- a/frontend/styles/Game.module.scss
+++ b/frontend/styles/Game.module.scss
@@ -7,30 +7,21 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     z-index: 10;
 }
-.display{
-    .inside{
-        height: 75vh;
-        padding: 2rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-}
+
 .dialog{
     position: fixed;
-    bottom: 0;
-    left: 0;
-    max-width: 90%;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 95%;
     min-width: 80%;
     max-height: 20vh;
     background-color: var(--background-yellow);
     padding: 2rem;
     border-radius: 10px;
-    margin: 10px;
     border: solid 2px var(--background-black);
     color: var(--background-black);
         button{
@@ -53,14 +44,14 @@
 }
 
 @media (max-width:1300px) {
-    #screen{
-        grid-template-columns: 1fr;
-        grid-template-rows: 2fr 1fr;
+    .dialog{
+        min-height: 15vh;
+        max-height: 30vh;
     }
-    .person{
-        grid-row: 2;
-        .img{
-          max-width: 300px;
-        }
+}
+@media (min-width:1500px) {
+    .dialog{
+        max-width: 1000px;
+        min-width: 900px;
     }
 }
