--- a/frontend/styles/Game.module.scss
+++ b/frontend/styles/Game.module.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    background-color: var(--background-yellow);
     z-index: 10;
 }
 
@@ -32,6 +33,29 @@
         }
 }
 
+.display{
+    position: absolute;
+    right: 5vw;
+    top: 5vh;
+    width: 60vw;
+    max-height: 70vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    // &::-webkit-scrollbar {
+    //     display: none;
+    //   }
+    //   -ms-overflow-style: none;  /* IE and Edge */
+    // scrollbar-width: none;
+    text-align: center;
+    background-color: var(--main-yellow);
+    padding: 1rem;
+    h2{
+        background-color: var(--background-yellow);
+        text-transform: uppercase;
+        border-radius: 10px;
+        padding: 1rem;
+    }
+}
 
 @media (max-width:1300px) {
     .dialog{
