--- a/frontend/styles/Game.module.scss
+++ b/frontend/styles/Game.module.scss
@@ -39,7 +39,7 @@
     top: 5vh;
     width: 60vw;
     max-height: 70vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     // &::-webkit-scrollbar {
     //     display: none;
