--- a/frontend/styles/templates/Templates.module.scss
+++ b/frontend/styles/templates/Templates.module.scss
@@ -6,7 +6,7 @@
 .newspaper{
     background-color: var(--background-yellow);
     position: relative;
-    width: 30vw;
+    margin: 1rem;
 }
 .title1{
     width: 100%;
@@ -18,4 +18,13 @@
 .img{
     width: 100%;
     height: 100%;
+    min-width: 500px;
+}
+
+@media (max-width:500px) {
+    .templates{
+    }
+    .img{
+        min-width: 270px;
+    }
 }
