--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -16,8 +16,7 @@ button {
   font-family: Century, Helvetica Neue, sans-serif;
 }
 body{
-  background-image: url("/newspapertexture.jpg");
-
+background-color: var(--background-yellow);
 }
 a {
   color: inherit;
