--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -53,7 +53,6 @@
 #image{
   position: relative;
   width: 100%;
-  max-height: 60vh;
   margin: 1rem 0;
   display: flex;
   flex-direction: column;
@@ -61,6 +60,7 @@
   align-items: center;
   background-color: var(--main-yellow);
   overflow: hidden;
+  padding: 1rem;
   img{
     max-height: 100%;
     width: auto;
