--- a/frontend/styles/Game.module.scss
+++ b/frontend/styles/Game.module.scss
@@ -58,14 +58,8 @@
     bottom: 0;
     overflow-y: auto;
     overflow-x: hidden;
-    // &::-webkit-scrollbar {
-    //     display: none;
-    //   }
-    //   -ms-overflow-style: none;  /* IE and Edge */
-    // scrollbar-width: none;
     text-align: center;
     background-color: var(--main-yellow);
-    padding: 1rem;
     h2{
         background-color: var(--background-yellow);
         text-transform: uppercase;
@@ -85,9 +79,54 @@
         margin: 0.5rem;
     }
 }
+.template{
+    max-width: 80vw;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem;
+}
+.finishScreen{
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    // display: grid;
+    // grid-template-columns: 3fr 1fr;
+    // justify-content: center;
+    button{
+        display: block;
+        @include button;
+        margin: 0.5rem;
+        width: 100%;
+        margin: 1rem 0;
+    }
+    .info{
+        background-color: var(--background-black);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 1rem;
+        height: 100%;
+        p{
+          color: var(--main-yellow);
+        }
+    }
+}
 @media (min-width:1500px) {
     .dialog{
         max-width: 1000px;
         min-width: 900px;
+    }
+}
+@media (max-width:1000px) {
+    .finishScreen{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .template{
+        max-width: none;
     }
 }
