--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -14,6 +14,11 @@ button {
   padding: 0;
   margin: 0;
   font-family: Century, Helvetica Neue, sans-serif;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;
 }
 body{
 background-color: var(--background-yellow);
@@ -75,6 +80,13 @@ a {
   border-radius: 50%;
   height: 16px;
   width: 16px;
+}
+.svglink{
+  transition: all 0.3s ease;
+  &:hover{
+    cursor: pointer;
+    fill: var(--background-black);
+  }
 }
 @keyframes dot {
   0%{
