Added dates and improved styling and finish week screen

--- a/frontend/styles/Game.module.scss
+++ b/frontend/styles/Game.module.scss
@@ -73,6 +73,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    padding: 1rem;
     button{
         display: block;
         @include button;
