--- a/frontend/styles/events/Event.module.scss
+++ b/frontend/styles/events/Event.module.scss
@@ -1,5 +1,6 @@
 .event{
     max-width: 300px;
+    height: 100%;
     background-color: var(--background-yellow);
     padding: 1rem;
     color: var(--background-black);
