--- a/frontend/styles/Game.module.scss
+++ b/frontend/styles/Game.module.scss
@@ -122,6 +122,7 @@
     flex-direction: column;
     justify-content: center;
     height: 100vh;
+    align-items: center;
 }
 @media (min-width:1500px) {
     .dialog{
