--- a/frontend/styles/Newsroom.module.scss
+++ b/frontend/styles/Newsroom.module.scss
@@ -24,6 +24,8 @@
     transform: translateX(-50%);
     button{
         @include button;
-
+        &:disabled{
+            background-color: gray;
+        }
     }
 }
