Changes to archive and select component

--- a/frontend/styles/Newsroom.module.scss
+++ b/frontend/styles/Newsroom.module.scss
@@ -30,3 +30,13 @@
         }
     }
 }
+.select{
+    background-color: var(--background-yellow);
+    border: 2px solid var(--background-black);
+    padding: 0.4rem 0.7rem;
+    border-radius: 3px;
+    margin: 0.5rem;
+    &:focus{
+        background-color: var(--main-yellow);
+    }
+}
