--- a/frontend/styles/Newsroom.module.scss
+++ b/frontend/styles/Newsroom.module.scss
@@ -30,13 +30,48 @@
         }
     }
 }
+.selection{
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    justify-content: center;
+    max-width: 1500px;
+}
 .select{
+    max-width: 500px;
+    position: relative;
+    button{
+    font-size: 1.5rem;
+    width: 100%;
     background-color: var(--background-yellow);
     border: 2px solid var(--background-black);
     padding: 0.4rem 0.7rem;
     border-radius: 3px;
-    margin: 0.5rem;
+    transition: all 0.1s ease;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     &:focus{
         background-color: var(--main-yellow);
+    }
+    &:hover{
+        background-color: var(--main-yellow);
+        cursor: pointer;
+    }
+    }
+    
+}
+.selectBox{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 11;
+    max-width: 500px;
+    max-height: 500px;
+    overflow-y: auto;
+    width: 100%;
+    background-color: var(--main-yellow);
+    button{
+        width: 100%;
     }
 }
