Archive select animations

--- a/frontend/styles/Newsroom.module.scss
+++ b/frontend/styles/Newsroom.module.scss
@@ -70,7 +70,7 @@
     max-height: 500px;
     overflow-y: auto;
     width: 100%;
-    background-color: var(--main-yellow);
+    background-color: var(--background-black);
     button{
         width: 100%;
     }
