changes to styling

--- a/styles/Game.module.scss
+++ b/styles/Game.module.scss
@@ -89,6 +89,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 1rem;
+    font-size: 30px;
 }
 .finishScreen{
     display: flex;
