--- a/styles/events/Event.module.scss
+++ b/styles/events/Event.module.scss
@@ -3,9 +3,13 @@
     height: 100%;
     background-color: var(--background-yellow);
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     color: var(--background-black);
     hr{
         height:5px;
+        width: 100%;
         background-color: var(--background-black);
     }
     box-shadow: 10px 10px 30px rgba(22, 22, 22, 0.2);
