--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -50,6 +50,20 @@ a {
   padding: 0;
   z-index: 22;
 }
+.badges{
+  background-color: var(--background-black);
+  color: var(--background-yellow);
+  width: fit-content;
+  border-radius: 0px 10px 0 0;
+  padding: 0.5rem 1rem;
+  border: none;
+  cursor: pointer;
+  font-size: 1.3rem;
+}
+#badges{
+  display: none;
+  transition: all 0.3s ease;
+}
 .loading{
   position: fixed;
   display: flex;
