--- a/styles/Newsroom.module.scss
+++ b/styles/Newsroom.module.scss
@@ -131,12 +131,16 @@
     z-index: 22;
     width: 50vw;
     min-width: 300px;
+    height: fit-content;
     display: block;
     padding: 1rem;
     background-color: var(--background-yellow);
     a{
+        display: block;
+        text-align: center;
         background-color: var(--background-black);
-        border-radius: 5px;
+        border-radius: 0 0 5px 5px;
+        width: 100%;
         color: var(--background-yellow);
         padding: 0.5rem 1rem;
         text-decoration: underline;
@@ -146,8 +150,25 @@
       }
       .templatePop{
           font-size: 25px;
+          min-width: 250px;
       }
     }
+.badges{
+    position:fixed; 
+    background-color:white; 
+    border-radius:10px;
+    display:flex; 
+    justify-content:center; 
+    padding:0.5rem 1rem; 
+    width:100%;
+    p:first-of-type{
+        font-size: large;
+        font-weight: 600;
+    }
+    p{
+        font-size: small;
+    }
+}
 
 @media (max-width:800px) {
     .archiveSVG{
