--- a/styles/Game.module.scss
+++ b/styles/Game.module.scss
@@ -94,7 +94,7 @@
 .finishScreen{
     display: flex;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     // display: grid;
     // grid-template-columns: 3fr 1fr;
