Added Badges to the gallery Replaced old articles for new ones

--- a/styles/Newsroom.module.scss
+++ b/styles/Newsroom.module.scss
@@ -155,6 +155,7 @@
     }
 .badges{
     position:fixed; 
+    z-index: 23;
     background-color:white; 
     border-radius:10px;
     display:flex; 
