Changes to our monitor screen and possibility to open and close the to do list

--- a/styles/Game.module.scss
+++ b/styles/Game.module.scss
@@ -31,7 +31,7 @@
 }
 .todo{
     position: absolute;
-    left: 0;
+    right: 0;
     top: 0px;
     max-height: 50vh;
     box-shadow: 10px 10px 30px var(--background-black);
